# MegaCalculator

./: Binomial_Calculator.py  Digit_writer.py  Eulers_number_Calculator.py  Factorial.py  Fibonacci.py  MegaCalculator.spec  Pi_Calculator.py  Prime_Number_Calculator.py  README.md  Shape_Calculator.py  Temperature_Convertor.py  Trignometric_Calculator.py  main.py  pyproject.toml
src/megacalculator/: __init__.py  __main__.py  resources.py
src/megacalculator/core/: __init__.py  calculations.py  converters.py  geometry.py
src/megacalculator/services/: __init__.py  currency.py
src/megacalculator/ui/: __init__.py  app.py
tests/: test_calculations.py  test_converters.py  test_currency.py  test_geometry.py  test_ui_smoke.py
