[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "megacalculator"
version = "1.0.0"
description = "A modern phone-style scientific calculator desktop app."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Aryan" }]
dependencies = [
    "customtkinter>=5.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
megacalculator = "megacalculator.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
